# contour-recognition-halcon

./: CMakeLists.txt  HalconProject.cpp  HalconProject.h  README.md
types/: htypes.cpp  htypes.h
utils/: utils.cpp  utils.h
